Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
     <header class="hero-section animate-on-scroll" id="home">
         <div class="container hero-container">
             <div class="hero-content">
-                <h1>Masih Capek Jadi Admin Chat Seumur Hidup?</h1>
-                <p class="subheadline">Otomatisasi WhatsApp, Rekap Order, & Laporan Harian. Biar sistem yang kerja 24
-                    jam, Anda fokus perbesar bisnis.</p>
-                <a href="#audit-form" class="cta-button primary">Ya, Saya Mau Sistem Ini</a>
+                <h1>Masih <em>Rela</em> Jadi <span class="text-primary">Admin Chat</span> Seumur Hidup?</h1>
+                <p class="subheadline">Stop <s>kerja rodi</s> balas chat manual & rekap order sampai begadang. Biarkan
+                    <strong>sistem cerdas</strong> yang bekerja 24 jam, sementara Anda fokus <u>perbesar bisnis</u> &
+                    nikmati hidup.</p>
+                <a href="#audit-form" class="cta-button primary">🚀 Ya, Saya Mau <strong>Sistem Otomatis</strong>
+                    Ini</a>
             </div>
 
         </div>
@@ -71,23 +73,27 @@
             <div class="grid-4">
                 <div class="card problem-card">
                     <div class="icon"><i class="ph ph-chats-teardrop"></i></div>
-                    <h3>Chat Numpuk</h3>
-                    <p>WhatsApp sering slow response karena chat menumpuk dan telat dibalas.</p>
+                    <h3>Chat <strong>Numpuk</strong></h3>
+                    <p>WhatsApp <em>slow response</em> karena chat membludak. Akibatnya? Calon pembeli <s>kabur ke
+                            kompetitor</s>.</p>
                 </div>
                 <div class="card problem-card">
                     <div class="icon"><i class="ph ph-notebook"></i></div>
-                    <h3>Order Manual</h3>
-                    <p>Order masih dicatat manual di buku atau Excel, sering ada yang terlewat atau lupa.</p>
+                    <h3>Order <s>Manual</s></h3>
+                    <p>Masih catat order di buku/Excel? Awas, <strong>human error</strong> mengintai! Salah kirim barang
+                        = rugi & komplain.</p>
                 </div>
                 <div class="card problem-card">
                     <div class="icon"><i class="ph ph-battery-warning"></i></div>
-                    <h3>Lelah Rekap</h3>
-                    <p>Malam hari capek tapi masih harus begadang buat rekap orderan seharian.</p>
+                    <h3>Lelah <strong>Rekap</strong></h3>
+                    <p>Malam waktunya istirahat, tapi Anda <em>terpaksa</em> begadang cuma buat rekap omzet. Kapan
+                        <u>nikmati hasil</u>?</p>
                 </div>
                 <div class="card problem-card">
                     <div class="icon"><i class="ph ph-chart-line-down"></i></div>
-                    <h3>Buta Data</h3>
-                    <p>Tidak tahu ringkasan penjualan harian secara real-time, semua serba kira-kira.</p>
+                    <h3>Buta <strong>Data</strong></h3>
+                    <p>Bisnis jalan pakai <em>feeling</em>? Bahaya. Tanpa data <strong>real-time</strong>, Anda seperti
+                        menyetir dengan mata tertutup.</p>
                 </div>
             </div>
         </div>
@@ -103,29 +109,33 @@
                         <li>
                             <span class="check"><i class="ph-fill ph-check-circle"></i></span>
                             <div>
-                                <strong>Auto-reply WhatsApp</strong>
-                                <p>Balas pertanyaan umum secara instan, 24 jam nonstop.</p>
+                                <strong>Auto-reply WhatsApp ⚡</strong>
+                                <p>Balas chat pelanggan dalam <u>detik</u>, 24 jam nonstop. Customer senang,
+                                    <em>closing</em> lebih cepat.</p>
                             </div>
                         </li>
                         <li>
                             <span class="check"><i class="ph-fill ph-check-circle"></i></span>
                             <div>
-                                <strong>Order Otomatis Tersimpan</strong>
-                                <p>Data pesanan langsung masuk ke Google Sheets/Database rapi.</p>
+                                <strong>Input Order <s>Manual</s> Otomatis</strong>
+                                <p>Format order masuk WA -> Langsung tersimpan rapi di Google Sheets/Database.
+                                    <strong>0% Typo.</strong></p>
                             </div>
                         </li>
                         <li>
                             <span class="check"><i class="ph-fill ph-check-circle"></i></span>
                             <div>
-                                <strong>Follow-up Otomatis</strong>
-                                <p>Ingatkan customer yang belum bayar tanpa perlu chat satu-satu.</p>
+                                <strong>Follow-up Tanpa Baper</strong>
+                                <p>Ingatkan customer yang <em>ghosting</em> belum bayar secara otomatis. Tingkatkan
+                                    konversi tanpa rasa sungkan.</p>
                             </div>
                         </li>
                         <li>
                             <span class="check"><i class="ph-fill ph-check-circle"></i></span>
                             <div>
-                                <strong>Laporan Harian via Email</strong>
-                                <p>Terima ringkasan omzet dan performa bisnis setiap pagi/malam.</p>
+                                <strong>Laporan Boss via Email 📩</strong>
+                                <p>Bangun tidur langsung terima email ringkasan omzet. Pantau bisnis sambil <u>ngopi
+                                        santai</u>.</p>
                             </div>
                         </li>
                     </ul>
@@ -169,9 +179,11 @@
     <section class="calculator-section animate-on-scroll" id="kalkulator">
         <div class="container">
             <div class="calc-header">
-                <h2 class="section-title">Stop Membakar Uang & Waktu!</h2>
-                <p class="section-subtitle">Setiap menit yang habis untuk rekap manual adalah <strong>profit yang
-                        hilang</strong>. Hitung berapa banyak yang bisa Anda selamatkan dengan Automasi.</p>
+                <h2 class="section-title">Stop <s>Membakar Uang</s> & Waktu!</h2>
+                <p class="section-subtitle">Setiap menit yang habis untuk rekap manual, sejatinya adalah <strong>profit
+                        yang
+                        terbuang</strong>. Jangan biarkan kompetitor menyalip hanya karena kerja Anda <em>lambat</em>.
+                </p>
             </div>
 
             <div class="calculator-wrapper">
